# RustyMail

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: main.rs  smtp_client.rs
src/db/: mod.rs
src/imap/: commands.rs  responses.rs  server.rs
src/models/: email.rs  mod.rs  user.rs
src/new_smtp/: commands.rs  dns_lookup.rs  main.rs  server.rs  smtp.rs  smtp_client.rs
src/smtp/: commands.rs  main.rs  mod.rs  responses.rs  server.rs  smtp_client.rs  tls.rs
src/smtp_tls/: client.rs  main.rs  relay.rs  server.rs
src/test_smtp/: README.md  run_smtp.rs  smtp.rs
src/tests/: mod.rs
