[package]
name = "RustyMail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

trust-dns-resolver = "0.23.2"

threadpool = "1.7.1"
num_cpus = "1.0"
clap = "2.32.0"

[[bin]]
name = "smtp"
path = "src/smtp/main.rs"
